# hydro-profiler

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.local
profiler/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  report_example.json  start.sh
profiler/profiler/: app.py
profiler/profiler/config/: config.py
profiler/profiler/db/: pg_engine.py  sqlite_context_manager.py
profiler/profiler/domain/: __init__.py  aggregation.py  batch_report.py  batch_statistics.py  check.py  column_processor.py  column_report.py  column_statistic.py  contract.py  descriptions.py  errors.py  feature_metric.py  metric_config.py  metric_spec.py  model.py  model_metrcis.py  model_metrics.py  model_report.py  model_signature.py  overall.py  overall_report.py  production_batch.py  report.py  table_requirement.py
profiler/profiler/grpc/: monitoring_manager.py
profiler/profiler/ports/: aggregations_repository.py  metrics_repository.py  models_repository.py  overall_reports_repository.py  reports_repository.py
profiler/profiler/protobuf/: monitoring_manager.proto  monitoring_manager_pb2.py  monitoring_manager_pb2_grpc.py
profiler/profiler/use_cases/: aggregation_use_case.py  metrics_use_case.py  overall_reports_use_case.py  report_use_case.py
profiler/profiler/utils/: decode_url.py  inference_url_parser.py  json_dumper.py  merge_dict.py  safe_divide.py
profiler/tests/: conftest.py  test_extract_file_name.py  test_metrics_use_case.py  test_min_max_metric.py  test_url_decoding.py  test_use_cases.py
(+158 files in other folders)
